# codecrafters-interpreter-c

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  class.lox  compile.sh  list.lox  map.lox  test.lox  your_program.sh
bench/: binary_tree_bench.c  equality_bench.c  ubench.h  zoo_bench.c
src/: ansi.h  ast.c  ast.h  bestline.c  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  interpreter.c  interpreter.h  main.c  memory.c  memory.h  object.c  object.h  parse.c  parse.h  scanner.c  scanner.h  stmt.h  table.c  table.h  token.c  token.h  value.c  value.h  vm.c  vm.h
tests/: bench.lox  class.lox  list.lox  list_test.c  map.lox  object.lox  utest.h  vm_test.c
